--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Portfolio
 email: luke4.roberts@live.uwe.ac.uk
 description: > # this means to ignore newlines until "baseurl:"
   My portfolio and Dev Blog.
-baseurl: "/folio" # the subpath of your site, e.g. /blog/
+baseurl: /
 url: https://LAMRoberts.github.io  # the base hostname & protocol for your site
 twitter_username: LAMRoberts
 github_username:  LAMRoberts
