--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ hightlighter: 'rouge'
 
 # Pagination
 paginate: 2
-paginate_path: "/blog/page:num/"
+paginate_path: "/Blog/page:num/"
 
 collections:
   portfolio:
