--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   My portfolio and Development Blog.
 baseurl: /
 url: https://LAMRoberts.github.io  # the base hostname & protocol for your site
-twitter_username: LAMRoberts
+twitter_username: LukeAMRoberts
 github_username:  LAMRoberts
 
 # SASS directory
